cdr: add user_uuid query string
