# xivo_call_logs/plugins/cdr/resource.py
@@ -19,7 +19,7 @@ class CDRResource(AuthResource):
     @required_acl('call-logd.cdr.read')
     def get(self):
         args = list_schema.load(request.args).data
-        cdrs = self.cdr_service.list(user_uuid=None, **args)
+        cdrs = self.cdr_service.list(**args)
         return CDRSchemaList().dump(cdrs).data
 
 
@@ -31,7 +31,7 @@ class CDRUserResource(AuthResource):
     @required_acl('call-logd.users.{user_uuid}.cdr.read')
     def get(self, user_uuid):
         args = list_schema.load(request.args).data
-        cdrs = self.cdr_service.list(user_uuid=user_uuid, **args)
+        cdrs = self.cdr_service.list(user_uuids=[user_uuid], **args)
         return CDRSchemaList().dump(cdrs).data
 
 
@@ -45,5 +45,5 @@ class CDRUserMeResource(AuthResource):
     def get(self):
         args = list_schema.load(request.args).data
         user_uuid = get_token_user_uuid_from_request(self.auth_client)
-        cdrs = self.cdr_service.list(user_uuid=user_uuid, **args)
+        cdrs = self.cdr_service.list(user_uuids=[user_uuid], **args)
         return CDRSchemaList(exclude=['items.tags']).dump(cdrs).data
